Change V4 for Colab

--- a/day2-am/Lab2_Car_ObjectDetection(solution)_v4.ipynb
+++ b/day2-am/Lab2_Car_ObjectDetection(solution)_v4.ipynb
@@ -2,29 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Fc04bXLRbar9"
+   },
    "source": [
     "![image](https://www.linkpicture.com/q/nyplogo.jpg)\n",
     "\n",
     "\n",
     "Welcome to the lab! Before we get started here are a few pointers on Jupyter notebooks.\n",
     "\n",
-    "1. The notebook is composed of cells; cells can contain code which you can run, or they can hold text and/or images which are there for you to read.\n",
+    "1. The notebook is composed of cells; cells can contain code which you can run by click on the play button.\n",
     "\n",
-    "2. You can execute code cells by clicking the ```Run``` icon in the menu, or via the following keyboard shortcuts ```Shift-Enter``` (run and advance) or \n",
-    "```Ctrl-Enter``` (run and stay in the current cell).\n",
     "\n",
-    "3. To interrupt cell execution, click the ```Stop``` button on the toolbar or navigate to the ```Kernel``` menu, and select ```Interrupt ```."
+    "2. To interrupt cell execution, click the ```Stop``` button on the side of the cell."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
     "id": "p7kdWxWYoOtS"
    },
    "source": [
-    "# **Lab 2 Car Object Detection**\n",
+    "# **Lab 2(solution) Car Object Detection**\n",
     "\n",
     "In this Lab we will try to build a car object detector to helps in the recognition and localization of multiple car instances in an image.\n",
     "\n",
@@ -51,18 +50,44 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "RWII5GZsvQVs"
+   },
    "source": [
-    "First goto the upper right corner of the jupyter notebook, select the pre-installed python virtual environment.\n",
-    "Look for python virtual environment with the name tf1env. Select this for our lab exercise. \n",
-    "\n",
-    "![image](https://www.linkpicture.com/q/tf1env.jpg)"
+    "Install modules "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 51955,
+     "status": "ok",
+     "timestamp": 1604667775941,
+     "user": {
+      "displayName": "NYP weech",
+      "photoUrl": "",
+      "userId": "03211871160483530494"
+     },
+     "user_tz": -480
+    },
+    "id": "lkRmcHc9fHes",
+    "outputId": "39982aa0-c68b-467e-ca4f-88c2cea7c966"
+   },
+   "outputs": [],
+   "source": [
+    "!pip install imageai\n",
+    "!pip install tensorflow==1.13.1\n",
+    "!pip install keras==2.1.6"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
     "id": "DAdHp9orDa6_"
    },
    "source": [
@@ -72,16 +97,16 @@
     "\n",
     "It is stored in the following dataset directory.\n",
     "\n",
-    "For train data, it is stored in the path ./dataset/Lab2dataset/data/train.\n",
+    "For train data, it is stored in the path ./Lab2dataset/data/train.\n",
     "```\n",
-    "./dataset/Lab2dataset/data/train\n",
+    "./Lab2dataset/data/train\n",
     "                           |- annotations\n",
     "                           |- images\n",
     "                   \n",
     "```\n",
-    "For train data, it is stored in the path ./dataset/Lab2dataset/data/validation.\n",
+    "For train data, it is stored in the path ./Lab2dataset/data/validation.\n",
     "```\n",
-    "./dataset/Lab2dataset/data/validation \n",
+    "./Lab2dataset/data/validation \n",
     "                           |- annotations\n",
     "                           |- images\n",
     "```\n",
@@ -90,7 +115,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "T8lGvVuyvoep"
+   },
+   "source": [
+    "Download the data and unzip it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 43668,
+     "status": "ok",
+     "timestamp": 1604663948060,
+     "user": {
+      "displayName": "NYP weech",
+      "photoUrl": "",
+      "userId": "03211871160483530494"
+     },
+     "user_tz": -480
+    },
+    "id": "nHmeJmkHbpM0",
+    "outputId": "0bae07e5-700f-4a8a-e4ee-0a5e12336fbc"
+   },
+   "outputs": [],
+   "source": [
+    "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/datasets/day2-am/Lab2dataset.zip\n",
+    "!unzip Lab2dataset.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "u67h9kxubar_"
+   },
    "source": [
     "### Exercise\n",
     "\n",
@@ -106,15 +169,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "bDPXnoKecWnv"
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "data_dir_path='Lab2dataset/'\n",
+    "models_path=data_dir_path+'models/'\n",
+    "data_path_train_images=data_dir_path+'train/images/'\n",
+    "data_path_validation_images= data_dir_path+'validation/images/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 33
+     "height": 256
     },
-    "colab_type": "code",
     "executionInfo": {
-     "elapsed": 23414,
+     "elapsed": 1469,
      "status": "ok",
-     "timestamp": 1600853236621,
+     "timestamp": 1604667779413,
      "user": {
       "displayName": "NYP weech",
       "photoUrl": "",
@@ -122,36 +199,22 @@
      },
      "user_tz": -480
     },
-    "id": "KhTgJj138RC4",
-    "outputId": "69c61f95-5c94-47a6-d9f0-acf69ca4eaf5"
+    "id": "TwjTLLiMbasC",
+    "outputId": "07f963bb-4b49-4f6e-cfd9-b887965e294c"
    },
-   "outputs": [],
-   "source": [
-    "#Set the variables to store the different path for dataset\n",
-    "data_dir_path='./dataset/Lab2dataset/'\n",
-    "models_path='./dataset/Lab2dataset/models/'\n",
-    "data_path_train_images='./dataset/Lab2dataset/train/images/'\n",
-    "data_path_validation_images='./dataset/Lab2dataset/validation/images/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
     "# TODO: complete the code below\n",
-    "img = mpimg.imread(#add code - train directory and image file name)\n",
+    "img = mpimg.imread(data_path_train_images+\"img1.jpg\")\n",
     "plt.imshow(img)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
     "id": "Ds3nszHmDtys"
    },
    "source": [
@@ -164,7 +227,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "meqgyYEFbasG"
+   },
    "source": [
     "Link to [Annotation exercise](Lab2_Annotation.md)"
    ]
@@ -172,7 +237,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
     "id": "tHfoQbCRGjfQ"
    },
    "source": [
@@ -189,7 +253,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
     "id": "fks1o7zc83IX"
    },
    "source": [
@@ -222,7 +285,7 @@
     "There are 5 files beacause we setted the iterations to be 5.\n",
     "The file name is form using iteration number and the loss value.\n",
     " eg. detection_model-ex-025--loss-0005.643.h5\n",
-    " From the smallest loss value of the file name we can determine which is the best weights. \n",
+    " From the smallest loss value of the file name we can determine which is the best weights.  \n",
     "<br/>\n",
     "</details>\n",
     "\n",
@@ -236,11 +299,21 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 1000
+     "height": 589
     },
-    "colab_type": "code",
+    "executionInfo": {
+     "elapsed": 11406,
+     "status": "error",
+     "timestamp": 1604499709295,
+     "user": {
+      "displayName": "NYP weech",
+      "photoUrl": "",
+      "userId": "03211871160483530494"
+     },
+     "user_tz": -480
+    },
     "id": "FrVHH-Ha9CVl",
-    "outputId": "11ce3c80-fc36-4cec-d503-d0b51a9543d0"
+    "outputId": "271fd8d0-e8de-4a4c-ed8e-9b01b22cec54"
    },
    "outputs": [],
    "source": [
@@ -250,18 +323,17 @@
     "trainer.setModelTypeAsYOLOv3()\n",
     "\n",
     "# TODO: complete the code below-add the main path where data is stored\n",
-    "trainer.setDataDirectory(data_directory=  #add code)\n",
+    "trainer.setDataDirectory(data_directory=  data_dir_path)\n",
     "                         \n",
     "# TODO: complete the code below-Set the training parameters \n",
-    "trainer.setTrainConfig(object_names_array=[#add code], batch_size=4, num_experiments=#add code, train_from_pretrained_model=data_dir_path+\"pretrained-yolov3.h5\")\n",
-    ".\n",
+    "trainer.setTrainConfig(object_names_array=['car'], num_experiments=20,batch_size=4, train_from_pretrained_model=data_dir_path+\"pretrained-yolov3.h5\")\n",
+    "\n",
     "trainer.trainModel()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
     "id": "iX-LsyOFHnup"
    },
    "source": [
@@ -272,12 +344,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Mbf7rYR2basK"
+   },
    "source": [
     "### Exercise\n",
     "For this exercise, we will load the trained weight into the YOLO neural network and perform the prediction.\n",
     "\n",
-    "- Choose one of the weights file from the previous exercise. Choose weights with ex-005, assign the directory and file name in the following YOLO neural network function. eg. models_path+'detection_model-ex-005--loss-0016.248.h5'\n",
+    "- Choose one of the weights file from the previous exercise. Choose weights with ex-005, assign the directory and file name in the following YOLO neural network function. eg. models_path+'detection_model-ex-005-loss-0016.248.h5'\n",
     "```\n",
     "detector.setModelPath()\n",
     "```\n",
@@ -296,7 +370,6 @@
     "</details>\n",
     "\n",
     "- Display the image with the predicted result. Add predicted result directory and output image file name to the imread() function(You can find it from the above detector.detectObjectsFromImage() function).\n",
-    "\n",
     "\n"
    ]
   },
@@ -306,13 +379,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 50
+     "height": 576
     },
-    "colab_type": "code",
     "executionInfo": {
-     "elapsed": 15890,
+     "elapsed": 16161,
      "status": "ok",
-     "timestamp": 1600854038207,
+     "timestamp": 1604667807547,
      "user": {
       "displayName": "NYP weech",
       "photoUrl": "",
@@ -321,7 +393,7 @@
      "user_tz": -480
     },
     "id": "jBTP2vr0Hubs",
-    "outputId": "c6f5fb01-bdcf-4e07-9ac5-13fbffdb2458"
+    "outputId": "6dd501b1-fcce-4ba7-8c81-b1d375aa72c6"
    },
    "outputs": [],
    "source": [
@@ -330,26 +402,26 @@
     "detector.setModelTypeAsYOLOv3()\n",
     "\n",
     "# TODO: complete the code below\n",
-    "detector.setModelPath(#add code)\n",
+    "detector.setModelPath(models_path+\"trained_detection_model-ex-025--loss-0005.643.h5\")\n",
     "\n",
     "detector.setJsonPath(data_dir_path+\"json/detection_config.json\")\n",
     "\n",
     "detector.loadModel()\n",
     "\n",
     "# TODO: complete the code below\n",
-    "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
+    "detections = detector.detectObjectsFromImage(input_image=data_dir_path+\"image1.jpg\", output_image_path=data_dir_path+\"image1out.jpg\")\n",
     "for detection in detections:\n",
     "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
     "\n",
-    "# TODO: complete the code below                                              \n",
-    "img = mpimg.imread(#add code - directory and output image file name)\n",
-    "plt.imshow(img)   \n",
-    "                            "
+    "img = mpimg.imread(data_dir_path+\"image1out.jpg\")\n",
+    "plt.imshow(img)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Rf1HxIAQbasM"
+   },
    "source": [
     "Once you have loaded the weights into the YOLO model, you can continue to use it to predict other images.\n",
     "\n",
@@ -364,13 +436,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 33
+     "height": 319
     },
-    "colab_type": "code",
     "executionInfo": {
-     "elapsed": 3076,
+     "elapsed": 3661,
      "status": "ok",
-     "timestamp": 1600854071904,
+     "timestamp": 1604667814837,
      "user": {
       "displayName": "NYP weech",
       "photoUrl": "",
@@ -379,49 +450,69 @@
      "user_tz": -480
     },
     "id": "PKPKBwYyEpuS",
-    "outputId": "7f4e2f6b-96c2-4375-a6f1-d51b61d23fe2"
+    "outputId": "928478a8-ee15-4d95-a810-ae123b3659e0"
    },
    "outputs": [],
    "source": [
-    "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
+    "detections = detector.detectObjectsFromImage(input_image=data_dir_path+\"image6.jpg\", output_image_path=data_dir_path+\"image6out.jpg\")\n",
     "for detection in detections:\n",
     "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
     "\n",
-    "img = mpimg.imread(#add code - directory and output image file name)\n",
+    "img = mpimg.imread(data_dir_path+\"image6out.jpg\")\n",
     "plt.imshow(img)\n",
     "                                             "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "NhzfvrapbasP"
+   },
    "source": [
     "Try with the given pre-trained weights(trained_detection_model-ex-025--loss-0005.643.h5) with lower loss value compare with the previous step. \n",
-    "Compare the probability and the postion of the bounding box with the ones predicted by the model using epoch 5 weights.\n"
+    "Compare the probability and the postion of the bounding box with the ones predicted by the model using epoch 3 weights.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 289
+    },
+    "executionInfo": {
+     "elapsed": 16429,
+     "status": "ok",
+     "timestamp": 1604667854487,
+     "user": {
+      "displayName": "NYP weech",
+      "photoUrl": "",
+      "userId": "03211871160483530494"
+     },
+     "user_tz": -480
+    },
+    "id": "Y7kkciJ7basP",
+    "outputId": "f1315a08-6eb5-420b-f015-39cafe940d69"
+   },
    "outputs": [],
    "source": [
     "detector = CustomObjectDetection()\n",
     "detector.setModelTypeAsYOLOv3()\n",
     "\n",
     "# TODO: complete the code below\n",
-    "detector.setModelPath(#add code)\n",
+    "detector.setModelPath(models_path+\"trained_detection_model-ex-025--loss-0005.643.h5\")\n",
     "\n",
     "detector.setJsonPath(data_dir_path+\"json/detection_config.json\")\n",
     "\n",
     "detector.loadModel()\n",
     "\n",
     "# TODO: complete the code below\n",
-    "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
+    "detections = detector.detectObjectsFromImage(input_image=data_dir_path+\"image1.jpg\", output_image_path=data_dir_path+\"image1out.jpg\")\n",
     "for detection in detections:\n",
     "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
     "\n",
-    "img = mpimg.imread(#add code - directory and output image file name)\n",
+    "img = mpimg.imread(data_dir_path+\"image1out.jpg\")\n",
     "plt.imshow(img)\n",
     "                                             "
    ]
@@ -429,23 +520,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 303
+    },
+    "executionInfo": {
+     "elapsed": 3596,
+     "status": "ok",
+     "timestamp": 1604667859083,
+     "user": {
+      "displayName": "NYP weech",
+      "photoUrl": "",
+      "userId": "03211871160483530494"
+     },
+     "user_tz": -480
+    },
+    "id": "r6wjvHUobasR",
+    "outputId": "47a6c91e-f05e-41ec-ed45-61d72523db9d"
+   },
    "outputs": [],
    "source": [
-    "detections = detector.detectObjectsFromImage(input_image=#add code, output_image_path=#add code)\n",
+    "detections = detector.detectObjectsFromImage(input_image=data_dir_path+\"image3.jpg\", output_image_path=data_dir_path+\"image3out.jpg\")\n",
     "for detection in detections:\n",
     "    print(detection[\"name\"], \" : \", detection[\"percentage_probability\"], \" : \", detection[\"box_points\"])\n",
     "\n",
-    "img = mpimg.imread(#add code - directory and output image file name)\n",
-    "plt.imshow(img)"
+    "img = mpimg.imread(data_dir_path+\"image3out.jpg\")\n",
+    "plt.imshow(img)\n",
+    "                   \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "ulw1B4yTbasT"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "accelerator": "GPU",
   "colab": {
-   "authorship_tag": "ABX9TyM+0kFKqv5vdeYNERkCEuvP",
-   "name": "Lab3_Car_ObjectDetection.ipynb",
+   "name": "Lab2_Car_ObjectDetection(solution)_v4.ipynb",
    "provenance": []
   },
   "kernelspec": {
