Updated colab to include section to restart runtime. Updated helpers to display tqdm for converting SPH files and generating manifests

--- a/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
+++ b/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
@@ -64,7 +64,29 @@
     "\n",
     "BRANCH = 'v1.0.0b2'\n",
     "!pip install git+https://github.com/NVIDIA/NeMo.git@$BRANCH#egg=nemo_toolkit[all]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IMPORTANT - Restart Runtime\n",
     "\n",
+    "You must restart your Colab session to allow the latest libraries that we just downloaded to take effect. \n",
+    "\n",
+    "To do so, either:\n",
+    "\n",
+    "1. Click on the \"Restart Runtime\" button in the output cell above, OR\n",
+    "2. Click on the menu \"Runtime\" > \"Restart runtime\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from helpers import *\n",
     "print (\"Import helpers complete.\")"
    ]
