--- a/day1-pm/video-anomaly-exercise-v2.ipynb
+++ b/day1-pm/video-anomaly-exercise-v2.ipynb
@@ -329,13 +329,14 @@
     "x = tf.keras.layers.Flatten()(x)\n",
     "\n",
     "## TODO: Modify the code \n",
-    "encoded = tf.keras.layers.Dense(2000)(x)\n",
+    "# this is the latent layer\n",
+    "encoded = tf.keras.layers.Dense(??)(x)\n",
     "\n",
     "\n",
     "encoder = tf.keras.Model(inputs=[inputs], outputs=[encoded])\n",
     "\n",
     "# The decoder part of the Audo-encoder model\n",
-    "decoder_inputs = tf.keras.layers.Input(shape=(2000))\n",
+    "decoder_inputs = tf.keras.layers.Input(shape=(1500))\n",
     "x = tf.keras.layers.Dense(22*22*32, activation='relu')(decoder_inputs)\n",
     "x = tf.keras.layers.Reshape(target_shape=(22,22,32))(x)\n",
     "x = tf.keras.layers.UpSampling2D(2, interpolation='nearest')(x)\n",
@@ -359,7 +360,7 @@
    "source": [
     "conv_ae.compile(loss=tf.keras.losses.MeanSquaredError(), \n",
     "        optimizer=tf.keras.optimizers.Adam(lr=1e-4, decay=1e-4),\n",
-    "        metrics=['mae'])"
+    "        metrics=['mse'])"
    ]
   },
   {
@@ -423,7 +424,7 @@
     "\n",
     "**Exercise**:\n",
     "\n",
-    "Add code below to prepare a dataset using samples from test folder \"Test002\".\n",
+    "Add code below to prepare a dataset using samples from test folder \"Test004\".\n",
     "\n",
     "<details><summary>Click here for answer</summary>\n",
     "<br/>\n",
@@ -431,7 +432,7 @@
     "```\n",
     "BATCH_SIZE=1\n",
     "\n",
-    "test_sample_folder = 'Test002'\n",
+    "test_sample_folder = 'Test004'\n",
     "\n",
     "test_fileset = os.path.join(test_dir, test_sample_folder, \"*.tif\")\n",
     "\n",
@@ -519,7 +520,8 @@
    },
    "outputs": [],
    "source": [
-    "## TODO: Complete the code "
+    "## TODO: Complete the code \n",
+    "\n"
    ]
   }
  ],
@@ -531,7 +533,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "tf2env",
+   "display_name": "Python3.8 (tf2env)",
    "language": "python",
    "name": "tf2env"
   },
@@ -545,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
