Updated day2pm lab3 to use NeMo v1.0.2

--- a/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
+++ b/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "day2pm_lab3_colab_exercise_v2.ipynb",
+      "name": "day2pm_lab3_colab_exercise.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -250,7 +250,7 @@
         "# Pass the function 'save_recorded_audio()' into the parameter but without\n",
         "# the single quotation marks \"'\"\n",
         "#\n",
-        "perform_transcription_on_file(???)"
+        "perform_transcription_on_file(\"???\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -575,7 +575,7 @@
         "# TODO:\n",
         "# Compute the Word Error Rate based on the testing data.\n",
         "# \n",
-        "compute_wer('data/test_manifest')"
+        "compute_wer('???')"
       ],
       "execution_count": null,
       "outputs": []
@@ -638,7 +638,7 @@
         "# TODO:\n",
         "# Update the following line to compute the WER on our test dataset\n",
         "#\n",
-        "compute_wer('data/test_manifest')"
+        "compute_wer('???')"
       ],
       "execution_count": null,
       "outputs": []
@@ -726,7 +726,7 @@
         "# TODO:\n",
         "# Update the following line to compute the WER on our test dataset\n",
         "#\n",
-        "compute_wer('data/test_manifest')"
+        "compute_wer('???')"
       ],
       "execution_count": null,
       "outputs": []
