--- a/day1-pm/video-anomaly-v2.ipynb
+++ b/day1-pm/video-anomaly-v2.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "YmeDYeK-aKnG"
       },
@@ -145,7 +145,7 @@
       },
       "source": [
         "We will use the UCSDped1 dataset here. The dataset is split into two subsets: one for training, and one for testing. \n",
-        "The training data (consists of 24 video clips) are in Train subfolder. Each clip is in a separate subfolder 'Train001', 'Train002', etc, and each of these subfolders contains 200 image frames.\n",
+        "The training data (consists of 34 video clips) are in Train subfolder. Each clip is in a separate subfolder 'Train001', 'Train002', etc, and each of these subfolders contains 200 image frames.\n",
         "\n",
         "In the code below, we are just setting up all the filepaths to be used later."
       ]
@@ -264,6 +264,7 @@
         "test_sample_folder = 'Test001' \n",
         "image_folder = os.path.join(test_dir, test_sample_folder) \n",
         "\n",
+        "gif_filename = test_sample_folder + '.gif' \n",
         "create_gif(image_folder, gif_filename, img_type='tif')\n",
         "\n",
         "with open(gif_filename,'rb') as file:\n",
@@ -278,7 +279,7 @@
       "source": [
         "### Prepare Training and Validation Dataset\n",
         "\n",
-        "Now we create a Tensorflow dataset suitable for use in training the Autoencoder network later. In preparing the dataset, we resize the all the images to same height `(IMG_HEIGHT)` and width `(IMG_WIDTH)`. Typically we set the height same as width (square image) for training, even though the original image may not be square. For deep learning network, it does not matter whether the image is square or rectangle.\n",
+        "Now we create a Tensorflow dataset suitable for use in training the Autoencoder network later. In preparing the dataset, we resize all the images to same height `(IMG_HEIGHT)` and width `(IMG_WIDTH)`. Typically we set the height the same as width (square image) for training, even though the original image may not be square. For deep learning network, it does not matter whether the image is square or rectangle.\n",
         "\n",
         "We also split the data into training set (80%) and validation set (20%). We use the validation set to check if we are overfitting model to the training data."
       ]
@@ -416,7 +417,7 @@
       },
       "source": [
         "Similarly we print out the summary of the decoder part, so that we can see the output shape of each decoder layer.\n",
-        "Opposite to the encoder, the number of neurons increases as we progress towards the output layer. We can see that from 2000 units in the latent layer, we use UpSampling and Transpose Convolution to increase the number of output neurons, until we get back the original size of the input image, i.e. 100x100x1."
+        "Opposite to the encoder, the number of neurons increases as we progress towards the output layer. We use Up-Sampling and Transpose Convolution to increase the number of neurons from 2000 units in the latent layer, to the original size of the input image, i.e. 100x100x1."
       ]
     },
     {
@@ -556,8 +557,11 @@
       },
       "outputs": [],
       "source": [
-        "sample_train_image = os.path.join(train_dir, 'Train001/001.tif')\n",
-        "sample_test_image = os.path.join(test_dir, 'Test024/140.tif')"
+        "# normal image taken from train set\n",
+        "normal_image = os.path.join(train_dir, 'Train001/001.tif')\n",
+        "\n",
+        "# anomalous image taken from test set\n",
+        "anomalous_image = os.path.join(test_dir, 'Test024/140.tif')"
       ]
     },
     {
@@ -579,7 +583,7 @@
       },
       "outputs": [],
       "source": [
-        "show_reconstructions(conv_ae, sample_train_image)"
+        "show_reconstructions(conv_ae, normal_image)"
       ]
     },
     {
@@ -601,7 +605,7 @@
       },
       "outputs": [],
       "source": [
-        "show_reconstructions(conv_ae, sample_test_image)"
+        "show_reconstructions(conv_ae, anomalous_image)"
       ]
     },
     {
@@ -610,22 +614,9 @@
         "id": "6PcUnwdsaKn3"
       },
       "source": [
-        "Let's us look at how the reconstruction loss varies for each video frame. Here you can clearly see that the loss starting to spike after the cart has entered the scene and continue to rise until the cart disappears from the scene, when the loss drops suddenly."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZpkcJZ1iaKn4"
-      },
-      "source": [
-        "### Prepare Testing Dataset\n",
+        "### Reconstruction Loss \n",
         "\n",
-        "Now we will create a test dataset that we can use to test the trained auto-encoder. \n",
-        "\n",
-        "**Exercise**:\n",
-        "\n",
-        "You can change the following `test_sample_folder` to the video folder you want to test. For now, let's just use the one from Test014 which you have visualized earlier in the lab."
+        "Let's us look at how the reconstruction loss varies for each video frame of a test video, when we pass the video frames through the autoencoder. "
       ]
     },
     {
@@ -682,13 +673,12 @@
       "source": [
         "#### Identification of anomalous object from the video frames\n",
         "\n",
-        "The function `identify_anomaly()` will compute the differences of each pixel between original frame and the reconstructed frame (for a total of 200 fames), and by comparing the differences over a patch of 4x4 pixels, and if the difference is above certain threshold, it will mark that patch with red color to signify that there is an anomalous object detected within that patch. \n",
+        "In the codes above, our model can tell which frame is anomalous, but it does not tell us where is the anomaly in the frame. \n",
+        "\n",
+        "Here we use the function `identify_anomaly()` to do that. The function compute the differences of each pixel between original frame and the reconstructed frame (for a total of 200 fames), and by comparing the differences over a patch of 4x4 pixels, and if the difference is above certain threshold, it will mark that patch with red color to signify that it is an anomalous region. \n",
         "\n",
         "The 200 frames will be displayed as animated gif to better visualize the changes over time.\n",
-        "\n",
-        "**Exercise**\n",
-        "\n",
-        "Try changing the threshold below to adjust the sensitivity of the certain pixels being classified as anomalous."
+        "\n"
       ]
     },
     {
@@ -706,23 +696,22 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "EhTt4ryzaKn-"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
-      ]
+        "**Exercise**\n",
+        "\n",
+        "Try changing the threshold above to adjust the sensitivity of the certain pixels being classified as anomalous."
+      ],
+      "metadata": {
+        "id": "YD5xAYYfuO6o"
+      }
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "name": "video-anomaly-v2.ipynb",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
