--- a/day1-pm/video-anomaly-v2.ipynb
+++ b/day1-pm/video-anomaly-v2.ipynb
@@ -512,12 +512,10 @@
       "source": [
         "num_epochs = 30\n",
         " \n",
-        "run_logdir = get_run_logdir() # e.g., './my_logs/run_2019_06_07-15_15_22'\n",
         "tensorboard_cb = tf.keras.callbacks.TensorBoard(run_logdir)\n",
         "history = conv_ae.fit(train_dataset, \n",
         "                  validation_data=validation_dataset,\n",
-        "                  epochs=num_epochs, \n",
-        "                  callbacks=[tensorboard_cb])\n"
+        "                  epochs=num_epochs)\n"
       ]
     },
     {
