updated to handle gpu unavailable

--- a/day2-pm/lab2/day2pm_lab2_colab_exercise.ipynb
+++ b/day2-pm/lab2/day2pm_lab2_colab_exercise.ipynb
@@ -47,6 +47,8 @@
       "outputs": [],
       "source": [
         "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day2-pm/lab2/lab2.zip\n",
+        "!wget https://raw.githubusercontent.com/nyp-sit/aiup/main/day2-pm/lab2/helpers.py\n",
+        "\n",
         "!unzip lab2.zip\n",
         "\n",
         "from helpers import *\n",
@@ -344,6 +346,34 @@
         "    0                          # Number of epochs/iterations to train this model.\n",
         "    )"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## uncomment the following if GPU training is not available\n",
+        "\n",
+        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day2-pm/lab2/sentiment.model.zip\n",
+        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day2-pm/lab2/train_history.pkl\n",
+        "# !unzip sentiment.model.zip\n",
+        "# load_pretrained()"
+      ],
+      "metadata": {
+        "id": "8tHLlIr2-LWD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display_training_progress()\n",
+        "evaluate_model()"
+      ],
+      "metadata": {
+        "id": "buO6PhP8-T_H"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
