updated with latest nemo version

--- a/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
+++ b/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb
@@ -6,7 +6,8 @@
     "colab": {
       "name": "day2pm_lab3_colab_exercise.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -27,6 +28,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nyp-sit/aiup/blob/main/day2-pm/lab3/day2pm_lab3_colab_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -70,33 +81,47 @@
       "cell_type": "code",
       "metadata": {
         "id": "Lc5B3Ct_exg5",
-        "scrolled": true
+        "scrolled": true,
+        "outputId": "470f32cc-0bfb-4ade-9856-375488ff0c2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/datasets/day2-pm/lab3/lab3.zip\n",
+        "!wget https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day2-pm/lab3/lab3.zip\n",
         "!unzip lab3.zip\n",
         "\n",
         "!pip install ipywebrtc==0.5.0\n",
         "!pip install ffmpeg-python==0.2.0\n",
         "\n",
-        "# Install all libraries necessary for NeMo\n",
-        "!pip install wget\n",
-        "!apt-get install sox libsndfile1 ffmpeg\n",
-        "!pip install unidecode\n",
         "!pip install matplotlib>=3.3.2\n",
         "\n",
         "## Install NeMo\n",
-        "BRANCH = 'v1.0.2'\n",
-        "!python -m pip install git+https://github.com/NVIDIA/NeMo.git@$BRANCH#egg=nemo_toolkit[all]\n",
+        "!apt-get -q update && apt-get -q install -y libsndfile1 ffmpeg\n",
+        "!pip install -q Cython\n",
+        "!pip install -q nemo_toolkit['all']\n",
+        "\n",
+        "BRANCH = 'main'\n",
         "\n",
         "## Grab the config we'll use in this example\n",
         "!mkdir configs\n",
-        "!wget -P configs/ https://raw.githubusercontent.com/NVIDIA/NeMo/$BRANCH/examples/asr/conf/config.yaml\n",
-        "\n",
-        "\n"
+        "!wget -P configs/ https://raw.githubusercontent.com/NVIDIA/NeMo/$BRANCH/examples/asr/conf/config.yaml\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting ffmpeg-python==0.2.0\n",
+            "  Downloading ffmpeg_python-0.2.0-py3-none-any.whl (25 kB)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from ffmpeg-python==0.2.0) (0.16.0)\n",
+            "Installing collected packages: ffmpeg-python\n",
+            "Successfully installed ffmpeg-python-0.2.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,14 +142,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vc4nZgTRVGXz"
+        "id": "Vc4nZgTRVGXz",
+        "outputId": "952578d5-80c1-49b9-d43b-310b8832eb2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from helpers import *\n",
         "print (\"Import helpers complete.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Import helpers complete.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
