updated with badge

--- a/day1-pm/video-anomaly-v2.ipynb
+++ b/day1-pm/video-anomaly-v2.ipynb
@@ -3,10 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GsMjQoiCaKnE"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nyp-sit/mindef-ai/blob/main/day1-pm/video-anomaly-v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nyp-sit/aiup/blob/main/day1-pm/video-anomaly-v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,8 +35,8 @@
       },
       "outputs": [],
       "source": [
-        "!wget -q https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/codes/dataset_util.py\n",
-        "!wget -q https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/codes/utils.py"
+        "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/dataset_util.py\n",
+        "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/utils.py"
       ]
     },
     {
@@ -79,18 +80,6 @@
         "from IPython.display import display\n",
         "from IPython.display import Image as ipyImage\n",
         "from dataset_util import prepare_dataset\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "R1JoAqvaaKnL"
-      },
-      "outputs": [],
-      "source": [
-        "# Uncomment this is to fix the libtiff bugs on Windows\n",
-        "# !conda install libtiff=4.1.0=h885aae3_4 -c conda-forge -y"
       ]
     },
     {
@@ -512,7 +501,6 @@
       "source": [
         "num_epochs = 30\n",
         " \n",
-        "tensorboard_cb = tf.keras.callbacks.TensorBoard(run_logdir)\n",
         "history = conv_ae.fit(train_dataset, \n",
         "                  validation_data=validation_dataset,\n",
         "                  epochs=num_epochs)\n"
@@ -526,6 +514,24 @@
       "source": [
         "Let's plot the training and validation loss to see how our network progress with the training. "
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Uncomment below if GPU is not available for training \n",
+        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/train_history.pkl\n",
+        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/video_anomaly.model.zip\n",
+        "# !unzip video_anomaly.model.zip \n",
+        "\n",
+        "# import pickle \n",
+        "# history = pickle.load(open(\"train_history.pkl\", \"rb\"))\n",
+        "# conv_ae = tf.keras.models.load_model(\"video_anomaly.model\")"
+      ],
+      "metadata": {
+        "id": "6aPWTW4zuL4R"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -709,7 +715,8 @@
     "accelerator": "GPU",
     "colab": {
       "name": "video-anomaly-v2.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
