updated with new links and pretrained model in case GPU not available

--- a/day1-pm/ids_autoencoder_v3.ipynb
+++ b/day1-pm/ids_autoencoder_v3.ipynb
@@ -70,7 +70,7 @@
         "id": "K2zGFIElAVtz"
       },
       "source": [
-        "!wget -q https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/codes/utils.py"
+        "!wget -q https://raw.githubusercontent.com/nyp-sit/aiup/main/day1-pm/utils.py"
       ],
       "execution_count": null,
       "outputs": []
@@ -166,7 +166,7 @@
       },
       "source": [
         "base_dataset_dir = 'ids_dataset'\n",
-        "datafile_url = 'https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/datasets/ids_dataset.zip'\n",
+        "datafile_url = 'https://nyp-aicourse.s3-ap-southeast-1.amazonaws.com/aiup/day1-pm/ids_dataset.zip'\n",
         "\n",
         "# download the zip file and extract it\n",
         "download_data(base_dataset_dir, datafile_url, extract=True, force=False)"
@@ -947,6 +947,25 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "## Uncomment below if GPU is not available for training \n",
+        "\n",
+        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/ids_train_history.pkl\n",
+        "# !wget https://nyp-aicourse.s3.ap-southeast-1.amazonaws.com/aiup/day1-pm/ids.model.zip\n",
+        "# !unzip ids.model.zip \n",
+        "\n",
+        "# import pickle \n",
+        "# xx = pickle.load(open(\"ids_train_history.pkl\", \"rb\"))\n",
+        "# conv_ae = tf.keras.models.load_model(\"ids.model\")"
+      ],
+      "metadata": {
+        "id": "vZfELZ7_DDc9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "PK3MszQGVMyI"
@@ -957,13 +976,12 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "AQGAjk_vVMyI"
-      },
       "source": [
-        "%load_ext tensorboard \n",
-        "%tensorboard --logdir tb_logs"
+        "plot_training_loss(history.history)"
       ],
+      "metadata": {
+        "id": "LQcm_a4VDFpj"
+      },
       "execution_count": null,
       "outputs": []
     },
